feat: complete implementation of pengguna domain
